--- a/public/frontend/css/pages/product_detail.css
+++ b/public/frontend/css/pages/product_detail.css
@@ -493,22 +493,22 @@ table {
   width: 360px;
   height: 360px;
 }
-#product_detail_main .productShow .picShow > ul {
+#product_detail_main .productShow .picShow .picShowUl {
   display: inline-block;
 }
-#product_detail_main .productShow .picShow > ul li {
+#product_detail_main .productShow .picShow .picShowUl li {
   display: inline-block;
   cursor: pointer;
   margin: 0 10px 0 0;
 }
-#product_detail_main .productShow .picShow > ul li:hover {
+#product_detail_main .productShow .picShow .picShowUl li:hover {
   border: 1px solid #25ba80;
 }
-#product_detail_main .productShow .picShow > ul li img {
+#product_detail_main .productShow .picShow .picShowUl li img {
   width: 80px;
   height: 80px;
 }
-#product_detail_main .productShow .picShow > ul li.active {
+#product_detail_main .productShow .picShow .picShowUl li.active {
   border: 1px solid #25ba80;
 }
 #product_detail_main .productShow .attrShow {
@@ -531,10 +531,10 @@ table {
   color: #25ba80;
   margin: 0 0 26px 0;
 }
-#product_detail_main .productShow .attrShow > ul {
+#product_detail_main .productShow .attrShow .classifyAttr {
   margin: 0 0 26px 0;
 }
-#product_detail_main .productShow .attrShow > ul > li {
+#product_detail_main .productShow .attrShow .classifyAttr > li {
   display: inline-block;
   cursor: pointer;
   padding: 3px 5px;
@@ -542,10 +542,27 @@ table {
   border-radius: 2px;
   margin: 0 20px 0 0;
 }
-#product_detail_main .productShow .attrShow > ul > li.active {
+#product_detail_main .productShow .attrShow .classifyAttr > li.active {
   color: #fff;
   border: 1px solid #25ba80;
   background: #25ba80;
+}
+#product_detail_main .productShow .attrShow .picShowUl {
+  margin: 0 0 26px 0;
+}
+#product_detail_main .productShow .attrShow .picShowUl li {
+  display: inline-block;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  margin: 0 10px 0 0;
+}
+#product_detail_main .productShow .attrShow .picShowUl li:hover {
+  border: 1px solid #25ba80;
+}
+#product_detail_main .productShow .attrShow .picShowUl li img {
+  width: 100%;
+  height: 100%;
 }
 #product_detail_main .productShow .attrShow > button {
   width: 186px;
@@ -642,10 +659,31 @@ table {
 }
 .addComment_dialog .addComment_dialog_main textarea {
   box-sizing: border-box;
-  width: 400px;
+  width: 100%;
   height: 100px;
   border-radius: 2px;
   border: solid 1px #cccccc;
   padding: 10px;
   margin: 5px 0;
+}
+@media screen and (max-width: 414px) {
+  #product_detail_main .productShow {
+    margin: 10px 0 47px 0;
+  }
+  #product_detail_main .productShow .picShow {
+    display: none;
+  }
+  #product_detail_main .productShow .attrShow {
+    width: 100%;
+    text-align: center;
+  }
+  #product_detail_main .productDesc {
+    width: 100%;
+  }
+  #product_detail_main .productDesc .comment {
+    padding: 20px 20px 80px 20px;
+  }
+  .addComment_dialog {
+    width: 332px;
+  }
 }
