--- a/public/frontend/less/pages/product_detail.less
+++ b/public/frontend/less/pages/product_detail.less
@@ -16,7 +16,7 @@
           height: 360px;
         }
       }
-      > ul {
+      .picShowUl {
         display: inline-block;
         li {
           display: inline-block;
@@ -54,7 +54,7 @@
         color: #25ba80;
         margin: 0 0 26px 0;
       }
-      > ul {
+      .classifyAttr{
         margin: 0 0 26px 0;
         > li {
           display: inline-block;
@@ -68,6 +68,23 @@
           color:#fff;
           border:1px solid #25ba80;
           background:#25ba80;
+        }
+      }
+      .picShowUl{
+        margin: 0 0 26px 0;
+        li {
+          display: inline-block;
+          cursor:pointer;
+          width:50px;
+          height:50px;
+          margin: 0 10px 0 0;
+          &:hover{
+            border:1px solid #25ba80;
+          }
+          img {
+            width: 100%;
+            height: 100%;
+          }
         }
       }
       >button{
@@ -173,12 +190,37 @@
     }
     textarea{
       box-sizing: border-box;
-      width: 400px;
+      width: 100%;
       height: 100px;
       border-radius: 2px;
       border: solid 1px #cccccc;
       padding: 10px;
       margin:5px 0;
     }
+  }
+}
+
+//响应式布局
+@media screen and (max-width: 414px) {
+  #product_detail_main{
+    .productShow{
+      margin:10px 0 47px 0;
+      .picShow{
+        display: none;
+      }
+      .attrShow{
+        width:100%;
+        text-align:center;
+      }
+    }
+    .productDesc{
+      width:100%;
+      .comment{
+        padding: 20px 20px 80px 20px;
+      }
+    }
+  }
+  .addComment_dialog{
+    width:332px;
   }
 }
